// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconMaximize should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-maximize "
  height={16}
  viewBox="0 0 16 16"
  width={16}
>
  <path
    className="fill-color"
    d="M8 8V3H2v5h6zm1 0v1H1V1h8v7z"
    fill="#000000"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconMaximize should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-maximize test"
  height={15}
  title="title"
  viewBox="0 0 16 16"
  width={15}
>
  <path
    className="fill-color"
    d="M8 8V3H2v5h6zm1 0v1H1V1h8v7z"
    fill="#782334"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;
